--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.131.0",
+    "openpyxl>=3.1.0",
     "uvicorn>=0.41.0",
 ]
 
